Fix systemd services to use virtual environment
- Use /opt/inventory-system/venv for system-wide installation
- Pass INVENTORY_PATH as command argument instead of WorkingDirectory
- Avoids systemd environment variable expansion issues
- Works around Arch Linux externally-managed-environment

Installation:
- Create venv: sudo python3 -m venv /opt/inventory-system/venv
- Install: sudo /opt/inventory-system/venv/bin/pip install .
- Install deps: sudo /opt/inventory-system/venv/bin/pip install fastapi uvicorn anthropic

--- a/systemd/inventory-chat@.service
+++ b/systemd/inventory-chat@.service
@@ -9,7 +9,7 @@ User=inventory-%i
 Group=inventory-%i
 EnvironmentFile=/etc/inventory-system/%i.conf
 Environment="ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}"
-ExecStart=/usr/bin/inventory-system chat --port ${CHAT_PORT}
+ExecStart=/opt/inventory-system/venv/bin/inventory-system chat ${INVENTORY_PATH} --port ${CHAT_PORT}
 Restart=on-failure
 RestartSec=5s
 
