Add python-multipart dependency for FastAPI form handling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ chat = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
     "anthropic>=0.39.0",
+    "python-multipart>=0.0.6",
 ]
 
 [project.scripts]
