--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ ocr = [
     "easyocr>=1.7.0",
 ]
 skos = [
-    "requests>=2.28.0",
+    "niquests"
 ]
 yaml = [
     "pyyaml>=6.0",
@@ -56,6 +56,11 @@ dev = [
     "pytest>=8.0",
     "ruff>=0.8",
     "pre-commit>=4.0",
+    "niquests",
+    "pyyaml>=6.0",
+    "easyocr>=1.7.0",
+    "reportlab>=4.0",
+    "qrcode[pil]>=7.4"
 ]
 
 [project.scripts]
